editors/tree-sitter-lira/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $._declaration,
      $._statement,
    ),

    // =========================================================================
    // DECLARATIONS
    // =========================================================================

    _statement: $ => choice(
      $._expression_statement,
      $.variable_declaration,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.while_statement,
      $.for_statement,
      $.loop_statement,
      $.try_statement,
      $.spawn_statement,
      $.select_statement,
      $.block,
    ),

    variable_declaration: $ => seq(
      choice('let', 'var', 'const'),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    for_statement: $ => seq(
      'for',
      field('pattern', $._pattern),
      'in',
      field('iterable', $._expression),
      field('body', $.block),
    ),

    // Loop statement
    match_body: $ => seq(
      '{',
      repeat($.match_arm),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $.match_pattern),
      optional(seq('if', field('guard', $._expression))),
      '=>',
      field('body', choice($._expression, $.block)),
      optional(','),
    ),

    match_pattern: $ => choice(
      $._pattern,
      seq($._pattern, repeat1(seq('|', $._pattern))),
    ),

    // Try statement
    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    // =========================================================================
    // EXPRESSIONS
    // =========================================================================

    _expression: $ => choice(
      $._literal,
      $.identifier,
      $.self_expression,
      $.super_expression,
      $.this_expression,
      $.group_expression,
      $.binary_expression,
      $.unary_expression,
      $.assignment_expression,
      $.compound_assignment_expression,
      $.call_expression,
      $.method_call_expression,
      $.member_expression,
      $.index_expression,
      $.array_expression,
      $.tuple_expression,
      $.map_expression,
      $.struct_expression,
      $.lambda_expression,
      $.if_expression,
      $.match_expression,
      $.range_expression,
      $.cast_expression,
      $.type_check_expression,
      $.try_expression,
      $.receive_expression,
      $.send_expression,
      $.optional_chain_expression,
      $.null_coalesce_expression,
      $.increment_expression,
      $.decrement_expression,
      $.new_expression,
      $.path_expression,
      $.generic_function,
    ),

    group_expression: $ => seq('(', $._expression, ')'),

    // Binary expressions
    binary_expression: $ => choice(
      prec.left(PREC.OR, seq($._expression, '||', $._expression)),
      prec.left(PREC.AND, seq($._expression, '&&', $._expression)),
      prec.left(PREC.BIT_OR, seq($._expression, '|', $._expression)),
      prec.left(PREC.BIT_XOR, seq($._expression, '^', $._expression)),
      prec.left(PREC.BIT_AND, seq($._expression, '&', $._expression)),
      prec.left(PREC.EQUALITY, seq($._expression, choice('==', '!='), $._expression)),
      prec.left(PREC.COMPARISON, seq($._expression, choice('<', '>', '<=', '>='), $._expression)),
      prec.left(PREC.SHIFT, seq($._expression, choice('<<', '>>', '>>>'), $._expression)),
      prec.left(PREC.ADD, seq($._expression, choice('+', '-'), $._expression)),
      prec.left(PREC.MULTIPLY, seq($._expression, choice('*', '/', '%'), $._expression)),
      prec.right(PREC.POWER, seq($._expression, '**', $._expression)),
    ),

    unary_expression: $ => prec.right(PREC.UNARY, seq(
      choice('-', '!', '~'),
      $._expression,
    )),

    // Assignment
    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice($.identifier, $.member_expression, $.index_expression)),
      '=',
      field('right', $._expression),
    )),

    compound_assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice($.identifier, $.member_expression, $.index_expression)),
      choice('+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>='),
      field('right', $._expression),
    )),

    // Increment/Decrement
    increment_expression: $ => choice(
      prec.left(PREC.POSTFIX, seq($._expression, '++')),
      prec.right(PREC.UNARY, seq('++', $._expression)),
    ),

    decrement_expression: $ => choice(
      prec.left(PREC.POSTFIX, seq($._expression, '--')),
      prec.right(PREC.UNARY, seq('--', $._expression)),
    ),

    // Call expression
    call_expression: $ => prec(PREC.CALL, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq(
      '(',
      optional(seq(
        commaSep1($.argument),
        optional(','),
      )),
      ')',
    ),

    argument: $ => choice(
      $._expression,
      seq(field('name', $.identifier), ':', field('value', $._expression)),
      seq('...', $._expression),
    ),

    // Method call
    method_call_expression: $ => prec(PREC.MEMBER, seq(
      field('receiver', $._expression),
      '.',
      field('method', $.identifier),
      optional($.type_arguments),
      field('arguments', $.arguments),
    )),

    // Member access
    member_expression: $ => prec.left(PREC.MEMBER, seq(
      field('object', $._expression),
      '.',
      field('member', $.identifier),
    )),

    // Optional chaining
    optional_chain_expression: $ => prec.left(PREC.MEMBER, seq(
      field('object', $._expression),
      '?.',
      field('member', $.identifier),
    )),

    // Index expression
    index_expression: $ => prec(PREC.CALL, seq(
      field('object', $._expression),
      '[',
      field('index', $._expression),
      ']',
    )),

    // Array literal
    array_expression: $ => seq(
      '[',
      optional(seq(
        commaSep1($._expression),
        optional(','),
      )),
      ']',
    ),

    // Tuple literal
    tuple_expression: $ => seq(
      '(',
      seq(
        $._expression,
        ',',
        optional(seq(
          commaSep1($._expression),
          optional(','),
        )),
      ),
      ')',
    ),

    // Map literal
    map_expression: $ => seq(
      '{',
      optional(seq(
        commaSep1($.map_entry),
        optional(','),
      )),
      '}',
    ),

    map_entry: $ => seq(
      field('key', choice($.string_literal, $.integer_literal, $.identifier)),
      ':',
      field('value', $._expression),
    ),

    // Struct literal
    struct_expression: $ => prec(PREC.CALL, seq(
      field('type', choice($.type_identifier, $.path_expression)),
      '{',
      optional(seq(
        commaSep1($.struct_field_initializer),
        optional(','),
      )),
      '}',
    )),

    struct_field_initializer: $ => choice(
      seq(field('name', $.identifier), ':', field('value', $._expression)),
      seq('..', $._expression),
      $.identifier,
    ),

    // Lambda expression
    lambda_expression: $ => seq(
      '|',
      optional(commaSep1($.lambda_parameter)),
      '|',
      optional(seq('->', $._type)),
      choice(
        field('body', $.block),
        field('body', $._expression),
      ),
    ),

    lambda_parameter: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
    ),

    // If expression
    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      $.match_body,
    ),

    // Range expression
    range_expression: $ => choice(
      prec.left(PREC.RANGE, seq(field('start', $._expression), '..', field('end', $._expression))),
      prec.left(PREC.RANGE, seq(field('start', $._expression), '..=', field('end', $._expression))),
      prec.left(PREC.RANGE, seq(field('start', $._expression), '..')),
      prec.right(PREC.RANGE, seq('..', field('end', $._expression))),
      prec.right(PREC.RANGE, seq('..=', field('end', $._expression))),
      prec(PREC.RANGE, '..'),
    ),

    // Cast expression
    cast_expression: $ => prec.left(PREC.COMPARISON, seq(
      field('value', $._expression),
      'as',
      field('type', $._type),
    )),

    // Type check expression
    type_check_expression: $ => prec.left(PREC.COMPARISON, seq(
      field('value', $._expression),
      'is',
      field('type', $._type),
    )),

    // Try expression (error propagation)
    try_expression: $ => prec(PREC.POSTFIX, seq(
      $._expression,
      '?',
    )),

    // Channel operations
    receive_expression: $ => prec.right(PREC.UNARY, seq(
      '<-',
      field('channel', $._expression),
    )),

    null_coalesce_expression: $ => prec.right(PREC.OR, seq(
      field('left', $._expression),
      '??',
      field('right', $._expression),
    )),

    // New expression
    new_expression: $ => prec.left(seq(
      'new',
      field('type', $._type),
      optional($.arguments),
    )),

    // Path expression (for enum variants, etc.)
    path_expression: $ => prec.left(seq(
      $.type_identifier,
      repeat1(seq(
        choice('.', '::'),
        $.identifier,
      )),
    )),

    // Generic function call
    generic_function: $ => prec(PREC.CALL, seq(
      field('function', $.identifier),
      '::',
      $.type_arguments,
    )),

    // Self/this/super
    self_expression: $ => 'self',
    _pattern: $ => choice(
      $.identifier,
      $.wildcard_pattern,
      $._literal,
      $.tuple_pattern,
      $.struct_pattern,
      $.enum_pattern,
      $.range_pattern,
      $.binding_pattern,
      $.rest_pattern,
    ),

    wildcard_pattern: $ => '_',

    tuple_pattern: $ => seq(
      '(',
      commaSep($._pattern),
      ')',
    ),

    struct_pattern: $ => seq(
      optional($.type_identifier),
      '{',
      commaSep(choice(
        $.identifier,
        seq(field('name', $.identifier), ':', field('pattern', $._pattern)),
        $.rest_pattern,
      )),
      optional(','),
      '}',
    ),

    enum_pattern: $ => prec.left(seq(
      $.type_identifier,
      optional(seq(
        choice('.', '::'),
        $.identifier,
      )),
      optional(seq('(', commaSep($._pattern), ')')),
    )),

    range_pattern: $ => prec.left(1, choice(
      seq($._literal, '..', $._literal),
      seq($._literal, '..=', $._literal),
    )),

    binding_pattern: $ => seq(
      field('name', $.identifier),
      '@',
      field('pattern', $._pattern),
    ),

    rest_pattern: $ => '..',

    // =========================================================================
    // TYPES
    // =========================================================================

    _type: $ => choice(
      $.primitive_type,
      $.type_identifier,
      $.generic_type,
      $.array_type,
      $.tuple_type,
      $.function_type,
      $.optional_type,
      $.path_type,
      $.self_type,
    ),

    primitive_type: $ => choice(
      'int',
      'int8',
      'int16',
      'int32',
      'int64',
      'uint',
      'uint8',
      'uint16',
      'uint32',
      'uint64',
      'float',
      'float32',
      'float64',
      'bool',
      'string',
      'char',
      'void',
    ),

    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    type_arguments: $ => seq(
      '<',
      commaSep1($._type),
      optional(','),
      '>',
    ),

    _literal: $ => choice(
      $.integer_literal,
      $.float_literal,
      $.string_literal,
      $.raw_string_literal,
      $.multiline_string_literal,
      $.char_literal,
      $.boolean_literal,
      $.null_literal,
    ),

    integer_literal: $ => token(choice(
      // Decimal with optional suffix
      seq(
        /[0-9][0-9_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
      // Hexadecimal
      seq(
        /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
      // Octal
      seq(
        /0[oO][0-7][0-7_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
      // Binary
      seq(
        /0[bB][01][01_]*/,
        optional(/[iu](8|16|32|64)?/),
      ),
    )),

    float_literal: $ => token(seq(
      choice(
        seq(/[0-9][0-9_]*/, '.', /[0-9][0-9_]*/),
        seq(/[0-9][0-9_]*/, /[eE][+-]?[0-9]+/),
        seq(/[0-9][0-9_]*/, '.', /[0-9][0-9_]*/, /[eE][+-]?[0-9]+/),
      ),
      optional(/f(32|64)?/),
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.string_interpolation,
      )),
      '"',
    ),

    string_content: $ => token.immediate(prec(1, /[^"\\$]+/)),

    escape_sequence: $ => token.immediate(seq(
      '\\',
      choice(
        /[nrtv\\'"0]/,
        /x[0-9a-fA-F]{2}/,
        /u\{[0-9a-fA-F]+\}/,
      ),
    )),

    string_interpolation: $ => seq(
      '${',
      $._expression,
      '}',
    ),

    char_literal: $ => seq(
      "'",
      choice(
        /[^'\\]/,
        $.escape_sequence,
      ),
      "'",
    ),

    boolean_literal: $ => choice('true', 'false'),

    null_literal: $ => 'null',

    // =========================================================================
    // IDENTIFIERS AND COMMENTS
    // =========================================================================

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
