editors/tree-sitter-lira/test/corpus/expressions.txt
================================================================================
Integer literal
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (integer_literal))

================================================================================
Hexadecimal literal
================================================================================

0xFF

--------------------------------------------------------------------------------

(source_file
  (integer_literal))

================================================================================
Binary literal
================================================================================

0b1010

--------------------------------------------------------------------------------

(source_file
  (integer_literal))

================================================================================
Octal literal
================================================================================

0o755

--------------------------------------------------------------------------------

(source_file
  (integer_literal))

================================================================================
Integer with suffix
================================================================================

42i64

--------------------------------------------------------------------------------

(source_file
  (integer_literal))

================================================================================
Float literal
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  (float_literal))

================================================================================
Float with exponent
================================================================================

1e10

--------------------------------------------------------------------------------

(source_file
  (float_literal))

================================================================================
String literal
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (string_literal
    (string_content)))

================================================================================
String with escape
================================================================================

"hello\nworld"

--------------------------------------------------------------------------------

(source_file
  (string_literal
    (string_content)
    (escape_sequence)
    (string_content)))

================================================================================
String interpolation
================================================================================

"Hello ${name}!"

--------------------------------------------------------------------------------

(source_file
  (string_literal
    (string_content)
    (string_interpolation
      (identifier))
    (string_content)))

================================================================================
Char literal
================================================================================

'a'

--------------------------------------------------------------------------------

(source_file
  (char_literal))

================================================================================
Boolean true
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (boolean_literal))

================================================================================
Boolean false
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  (boolean_literal))

================================================================================
Null literal
================================================================================

null

--------------------------------------------------------------------------------

(source_file
  (null_literal))

================================================================================
Identifier
================================================================================

foo

--------------------------------------------------------------------------------

(source_file
  (identifier))

================================================================================
Self expression
================================================================================

self

--------------------------------------------------------------------------------

(source_file
  (self_expression))

================================================================================
Binary addition
================================================================================

a + b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Binary multiplication
================================================================================

a * b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Operator precedence
================================================================================

a + b * c

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Logical operators
================================================================================

a && b || c

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (binary_expression
      (identifier)
      (identifier))
    (identifier)))

================================================================================
Comparison operators
================================================================================

a < b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Equality operators
================================================================================

a == b

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Bitwise operators
================================================================================

a | b & c

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Shift operators
================================================================================

a << 2

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (integer_literal)))

================================================================================
Power operator
================================================================================

2 ** 10

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (integer_literal)
    (integer_literal)))

================================================================================
Unary negation
================================================================================

-x

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    (identifier)))

================================================================================
Unary not
================================================================================

!flag

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    (identifier)))

================================================================================
Unary bitwise not
================================================================================

~bits

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    (identifier)))

================================================================================
Assignment
================================================================================

x = 42

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (integer_literal)))

================================================================================
Compound assignment
================================================================================

x += 1

--------------------------------------------------------------------------------

(source_file
  (compound_assignment_expression
    left: (identifier)
    right: (integer_literal)))

================================================================================
Increment expression
================================================================================

x++

--------------------------------------------------------------------------------

(source_file
  (increment_expression
    (identifier)))

================================================================================
Decrement expression
================================================================================

x--

--------------------------------------------------------------------------------

(source_file
  (decrement_expression
    (identifier)))

================================================================================
Prefix increment
================================================================================

++x

--------------------------------------------------------------------------------

(source_file
  (increment_expression
    (identifier)))

================================================================================
Function call
================================================================================

foo()

--------------------------------------------------------------------------------

(source_file
  (call_expression
    function: (identifier)
    arguments: (arguments)))

================================================================================
Function call with arguments
================================================================================

add(1, 2)

--------------------------------------------------------------------------------

(source_file
  (call_expression
    function: (identifier)
    arguments: (arguments
      (argument
        (integer_literal))
      (argument
        (integer_literal)))))

================================================================================
Named arguments
================================================================================

create(name: "test", value: 42)

--------------------------------------------------------------------------------

(source_file
  (call_expression
    function: (identifier)
    arguments: (arguments
      (argument
        name: (identifier)
        value: (string_literal
          (string_content)))
      (argument
        name: (identifier)
        value: (integer_literal)))))

================================================================================
Spread argument
================================================================================

fn_call(...args)

--------------------------------------------------------------------------------

(source_file
  (call_expression
    function: (identifier)
    arguments: (arguments
      (argument
        (identifier)))))

================================================================================
Method call
================================================================================

obj.method()

--------------------------------------------------------------------------------

(source_file
  (method_call_expression
    receiver: (identifier)
    method: (identifier)
    arguments: (arguments)))

================================================================================
Method call chain
================================================================================

a.b().c()

--------------------------------------------------------------------------------

(source_file
  (method_call_expression
    receiver: (method_call_expression
      receiver: (identifier)
      method: (identifier)
      arguments: (arguments))
    method: (identifier)
    arguments: (arguments)))

================================================================================
Member access
================================================================================

point.x

--------------------------------------------------------------------------------

(source_file
  (member_expression
    object: (identifier)
    member: (identifier)))

================================================================================
Optional chaining
================================================================================

obj?.value

--------------------------------------------------------------------------------

(source_file
  (optional_chain_expression
    object: (identifier)
    member: (identifier)))

================================================================================
Index expression
================================================================================

arr[0]

--------------------------------------------------------------------------------

(source_file
  (index_expression
    object: (identifier)
    index: (integer_literal)))

================================================================================
Array literal
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (array_expression
    (integer_literal)
    (integer_literal)
    (integer_literal)))

================================================================================
Empty array
================================================================================

[]

--------------------------------------------------------------------------------

(source_file
  (array_expression))

================================================================================
Tuple expression
================================================================================

(1, 2)

--------------------------------------------------------------------------------

(source_file
  (tuple_expression
    (integer_literal)
    (integer_literal)))

================================================================================
Map expression
================================================================================

{ "a": 1, "b": 2 }

--------------------------------------------------------------------------------

(source_file
  (map_expression
    (map_entry
      key: (string_literal
        (string_content))
      value: (integer_literal))
    (map_entry
      key: (string_literal
        (string_content))
      value: (integer_literal))))

================================================================================
Struct expression
================================================================================

Point { x: 10, y: 20 }

--------------------------------------------------------------------------------

(source_file
  (struct_expression
    type: (type_identifier)
    (struct_field_initializer
      name: (identifier)
      value: (integer_literal))
    (struct_field_initializer
      name: (identifier)
      value: (integer_literal))))

================================================================================
Struct expression shorthand
================================================================================

Point { x, y }

--------------------------------------------------------------------------------

(source_file
  (struct_expression
    type: (type_identifier)
    (struct_field_initializer
      (identifier))
    (struct_field_initializer
      (identifier))))

================================================================================
Struct expression spread
================================================================================

Point { x: 5, ..other }

--------------------------------------------------------------------------------

(source_file
  (struct_expression
    type: (type_identifier)
    (struct_field_initializer
      name: (identifier)
      value: (integer_literal))
    (struct_field_initializer
      (identifier))))

================================================================================
Lambda expression
================================================================================

|x| x * 2

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_parameter
      name: (identifier))
    body: (binary_expression
      (identifier)
      (integer_literal))))

================================================================================
Lambda with type
================================================================================

|x: int| -> int { x * 2 }

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_parameter
      name: (identifier)
      type: (primitive_type))
    (primitive_type)
    body: (block
      (binary_expression
        (identifier)
        (integer_literal)))))

================================================================================
Multi-parameter lambda
================================================================================

|a, b| a + b

--------------------------------------------------------------------------------

(source_file
  (lambda_expression
    (lambda_parameter
      name: (identifier))
    (lambda_parameter
      name: (identifier))
    body: (binary_expression
      (identifier)
      (identifier))))

================================================================================
Range expression exclusive
================================================================================

0..10

--------------------------------------------------------------------------------

(source_file
  (range_expression
    start: (integer_literal)
    end: (integer_literal)))

================================================================================
Range expression inclusive
================================================================================

0..=10

--------------------------------------------------------------------------------

(source_file
  (range_expression
    start: (integer_literal)
    end: (integer_literal)))

================================================================================
Range from
================================================================================

5..

--------------------------------------------------------------------------------

(source_file
  (range_expression
    start: (integer_literal)))

================================================================================
Range to
================================================================================

..10

--------------------------------------------------------------------------------

(source_file
  (range_expression
    end: (integer_literal)))

================================================================================
Cast expression
================================================================================

x as int

--------------------------------------------------------------------------------

(source_file
  (cast_expression
    value: (identifier)
    type: (primitive_type)))

================================================================================
Type check expression
================================================================================

x is String

--------------------------------------------------------------------------------

(source_file
  (type_check_expression
    value: (identifier)
    type: (type_identifier)))

================================================================================
Try expression
================================================================================

result?

--------------------------------------------------------------------------------

(source_file
  (try_expression
    (identifier)))

================================================================================
Receive expression
================================================================================

<-channel

--------------------------------------------------------------------------------

(source_file
  (receive_expression
    channel: (identifier)))

================================================================================
Null coalesce
================================================================================

x ?? default

--------------------------------------------------------------------------------

(source_file
  (null_coalesce_expression
    left: (identifier)
    right: (identifier)))

================================================================================
New expression
================================================================================

new Object()

--------------------------------------------------------------------------------

(source_file
  (new_expression
    type: (type_identifier)
    (arguments)))

================================================================================
Path expression
================================================================================

Option.Some

--------------------------------------------------------------------------------

(source_file
  (path_expression
    (type_identifier)
    (identifier)))

================================================================================
Generic function call
================================================================================

parse::<int>

--------------------------------------------------------------------------------

(source_file
  (generic_function
    function: (identifier)
    (type_arguments
      (primitive_type))))

================================================================================
Grouped expression
================================================================================

(a + b) * c

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (group_expression
      (binary_expression
        (identifier)
        (identifier)))
    (identifier)))
